Updated recommendations with nuts meta category

--- a/notebooks/Alternatives-biscuits_snacks.ipynb
+++ b/notebooks/Alternatives-biscuits_snacks.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfp = pd.read_sql('select * from product_summary', engine, index_col='index')\n",
@@ -2355,6 +2357,7 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -2633,7 +2636,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "price_df = recommend_df['price_difference'].apply(pd.Series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
@@ -2841,13 +2855,12 @@
        "*RUSK WHOLEWHEAT GRAND BAKERY 200GR    -0.025000  -0.126426 NaN"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " v = recommend_df['price_difference'].apply(pd.Series)\n",
     "price_df[price_df.index.isin(best_recommend.index)]"
    ]
   },
